add P5 style in mCustomScrollbar.css

--- a/css/Persona5Style.css
+++ b/css/Persona5Style.css
@@ -36,7 +36,8 @@
 	-webkit-animation: 0.75s menuInnerAnime ease-in-out infinite;
 }
 .menu {
-	float: left;
+	display: block;
+	text-align: center;
 	position: relative;
 }
 .menuOuter {
